# VIAM_AUV2000_ROS_v2.2

./: .gitignore  README.md
mavlink_QGC/ardupilotmega/: version.h
mavlink_QGC/common/: common.h  common.hpp  mavlink_msg_cho_khoa.h  mavlink_msg_cho_khoa.hpp  mavlink_msg_custom_msg_mass_shifter.h  mavlink_msg_custom_msg_mass_shifter.hpp  mavlink_msg_custom_msg_pistol.hpp  mavlink_msg_vision_position_estimate.h  mavlink_msg_vision_speed_estimate.h  version.h
mavlink_QGC/icarous/: version.h
mavlink_QGC/message_definitions/v1.0/: common.xml
mavlink_QGC/msg_generation/mavlink_msg_old_version/common/: common.h  common.hpp  gtestsuite.hpp
mavlink_QGC/msg_generation/mavlink_msg_old_version/minimal/: version.h
mavlink_QGC/msg_generation/qgc_mavlink_msg/ardupilotmega/: ardupilotmega.hpp  version.h
mavlink_QGC/msg_generation/qgc_mavlink_msg/common/: common.h  common.hpp  gtestsuite.hpp  mavlink_msg_global_vision_position_estimate.h  mavlink_msg_manual_control.h  mavlink_msg_odometry.h  mavlink_msg_rc_channels_raw.h  mavlink_msg_rc_channels_scaled.h  mavlink_msg_sys_status.h  testsuite.h
mavlink_QGC/msg_generation/qgc_mavlink_msg/custom_msg_mavlink/: custom_msg_mavlink.h  custom_msg_mavlink.hpp  mavlink_msg_custom_msg_mass_shifter.hpp  version.h
mavlink_QGC/msg_generation/qgc_mavlink_msg/icarous/: version.h
mavlink_QGC/msg_generation/qgc_mavlink_msg/uAvionix/: version.h
mavlink_QGC/msg_generation/qgc_mavlink_msg_v2/common/: common.h  common.hpp  gtestsuite.hpp  mavlink_msg_manual_control.h  mavlink_msg_manual_control.hpp  mavlink_msg_sys_status.h  mavlink_msg_sys_status.hpp  testsuite.h
mavlink_QGC/msg_generation/qgc_mavlink_msg_v2/custom_msg_mavlink/: custom_msg_mavlink.h  gtestsuite.hpp  (+5 more)
mavlink_QGC/pymavlink/generator/: mavgen.py
mavlink_QGC/uAvionix/: version.h
mavlink_ROS/logs/catkin_tools_prebuild/: build.symlink.001.log.stderr
mavlink_ROS/logs/mavlink/: build.make.005.log.stderr  build.make.006.log.stderr  build.make.009.log.stderr
mavlink_ROS/logs/mavros/: build.make.000.log.stderr  build.make.001.log.stderr
mavlink_ROS/src/: .rosinstall  .rosinstall.bak
my_auv2000_ros/src/auv2000_control/: CMakeLists.txt  package.xml
my_auv2000_ros/src/auv2000_control/include/: auv_controller.h  base_los.h  heading_smc.h  pid.h  sbg_los.h  straight_los.h
my_auv2000_ros/src/auv2000_control/src/: auv_controller.cpp  base_los.cpp  heading_smc.cpp  pid.cpp  sbg_los.cpp  straight_los.cpp
my_auv2000_ros/src/auv2000_description/: CMakeLists.txt  package.xml
my_auv2000_ros/src/auv2000_gazebo_simulation/: CMakeLists.txt  package.xml
my_auv2000_ros/src/auv2000_gazebo_simulation/include/: ahrs_filter.hh  arm1_plugin.hh  arm2_plugin.hh  dvl_plugin.hh  dynamics_plugin.hh  gps-ins-dvl_filter.hh  gps_ins_dvl.hh  gps_plugin.hh  imu_plugin.hh  irm1_plugin.hh  irm2_plugin.hh  magnet_plugin.hh  mass_shifter_plugin.hh  p3d_plugin.hh  piston_plugin.hh  pressure_sensor_plugin.hh  rudder_plugin.hh  sonar_plugin.hh  thrusters_plugin.hh
my_auv2000_ros/src/auv2000_gazebo_simulation/launch/: config.launch  start_auv.launch  start_auv_2.launch  upload_auv.launch
my_auv2000_ros/src/auv2000_gazebo_simulation/robots/: default.xacro
my_auv2000_ros/src/auv2000_gazebo_simulation/scripts/: thrust_commander.py
my_auv2000_ros/src/auv2000_gazebo_simulation/src/: ahrs_filter.cc  arm1_plugin.cc  arm2_plugin.cc  dvl_plugin.cc  dynamics_plugin.cc  gps-ins-dvl_filter.cc  gps_ins_dvl.cc  gps_plugin.cc  imu_plugin.cc  irm1_plugin.cc  irm2_plugin.cc  mass_shifter_plugin.cc  p3d_plugin.cc  piston_plugin.cc  pressure_sensor_plugin.cc  rudder_plugin.cc  sonar_plugin.cc  thrusters_plugin.cc
my_auv2000_ros/src/auv2000_gazebo_simulation/urdf/: arm1_plugin.xacro  arm2_plugin.xacro  dvl_plugin.xacro  dynamics_plugin.xacro  gps-ins-dvl_filter.xacro  gps_ins_dvl.xacro  gps_plugin.xacro  imu_plugin.xacro  irm1_plugin.xacro  irm2_plugin.xacro  magnet_plugin.xacro  mass_shifter_plugin.xacro  model_with_plugins.xacro  piston_plugin.xacro  pressure_sensor_plugin.xacro  rudder_plugin.xacro  sonar_plugin.xacro  thrusters_plugin.xacro
my_auv2000_ros/src/auv2000_gazebo_simulation/world/: auv_underwater_world.world  herkules_ship_wreck.world  lake.world  mangalia.world  open_sea.world  valley.world
my_auv2000_ros/src/mavconn/: CMakeLists.txt  package.xml
my_auv2000_ros/src/mavconn/include/: interface.h  mavlink_dialect.h  msgbuffer.h  serial.h  tcp.h  udp.h
my_auv2000_ros/src/mavconn/include/mavlink/ASLUAV/: ASLUAV.h  version.h
my_auv2000_ros/src/mavconn/include/mavlink/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp
my_auv2000_ros/src/mavconn/include/mavlink/autoquad/: autoquad.h  version.h
my_auv2000_ros/src/mavconn/include/mavlink/common/: mavlink_msg_custom_msg_board_arm1.hpp  mavlink_msg_custom_msg_mass_shifter.hpp  mavlink_msg_custom_msg_thruster.h  testsuite.h  version.h
my_auv2000_ros/src/mavconn/include/mavlink/matrixpilot/: matrixpilot.h
my_auv2000_ros/src/mavconn/include/mavlink/paparazzi/: version.h
my_auv2000_ros/src/mavconn/include/mavlink/slugs/: slugs.hpp  version.h
my_auv2000_ros/src/mavconn/include/mavlink/standard/: standard.hpp
my_auv2000_ros/src/mavconn/include/mavlink/uAvionix/: version.h
my_auv2000_ros/src/mavconn/include/mavlink/ualberta/: ualberta.h
my_auv2000_ros/src/mavconn/include/mavlink/viam_auv2000/: mavlink_msg_custom_msg_board_arm1.h  mavlink_msg_custom_msg_board_arm2.hpp  mavlink_msg_custom_msg_thruster.hpp  version.h  viam_auv2000.hpp
my_auv2000_ros/src/mavconn/src/: interface.cpp  mavlink_helpers.cpp  serial.cpp  tcp.cpp  udp.cpp
my_auv2000_ros/src/navigator/: CMakeLists.txt
my_auv2000_ros/src/navigator/include/: gps-ahrs2_receiver.h  gps-ahrs_receiver.h  gps-ins-dvl_receiver.h
my_auv2000_ros/src/navigator/src/: gps-ahrs2_receiver.cpp  gps-ahrs_receiver.cpp  gps-ins-dvl_receiver.cpp
my_auv2000_ros/src/utils/: CMakeLists.txt
my_auv2000_ros/src/utils/include/: math.h
my_auv2000_ros/src/utils/msg/: KeyboardCommand.msg  Odometry.msg  ThrustCommand.msg  bms_stamped.msg  board_arm2_stamped.msg  gps_dvl_ins_stamped.msg  motor_stamped.msg
(+144 files in other folders)
