<package format="2">
<name>auv2000_gazebo_simulation</name>
<version>0.0.0</version>
<description>The simulation package</description>
<maintainer email="legopro@todo.todo">legopro</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>


  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>auv2000_description</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>sensor_msgs</depend>
  <depend>utils</depend>


  <build_depend>urdf</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


</package>
